# opengl

./: CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  fps_camera.cpp  fps_camera.h  isogame.cpp  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  primitives.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h
src/shaders/: 1.frag  1.vert  backpack.frag  object.frag  object.vert
